2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Trim firmware output on EFI.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (vga_text): Disable on muliboot
	and coreboot since it's already in kernel.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_util_get_dm_node_linear_info): Moved from here...
	* grub-core/kern/emu/hostdisk.c (grub_util_get_dm_node_linear_info):
	to here. New return value start. All users updated.
	Recursively scan linear mappings.
	* include/grub/emu/hostdisk.h (grub_util_get_dm_node_linear_info): New
	proto.
	* grub-core/kern/emu/hostdisk.c (grub_hostdisk_find_partition_start):
	Use grub_util_get_dm_node_linear_info.
	* util/getroot.c (convert_system_partition_to_system_disk): Use
	grub_util_info rather than grub_dprintf.
	(grub_util_biosdisk_get_grub_dev): Add a new grub_util_info.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Move handling of GRUB_QEMU_OPTS to grub-shell so that make check works.

	* Makefile.am: Remove GRUB_QEMU_OPTS handling.
	* tests/util/grub-shell.in: Add GRUB_QEMU_OPTS handling.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/types.h (grub_set_unaligned64): New function.
	* util/grub-setup.c (write_rootdev): Use unaligned access functions.
	(setup): Likewise.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c (quiesce): New function.
	(grub_ofdisk_fini): Quiesce USB devices.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/powerpc/ieee1275/linux.c (grub_linux_boot): Sync
	caches.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (cmd_crc): Use grub_get_unaligned32 for safety.

2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/pata.c (grub_pata_pio_read)
	[GRUB_MACHINE_MIPS_QEMU_MIPS]: Don't byteswap even on mipseb.